--- a/demo.html
+++ b/demo.html
@@ -507,7 +507,8 @@
         </section>
 
         <section>
-            <h2>4、方案3，audio模块说话人控制结果</h2>
+            <h2>4、方案3，audio模块控制结果</h2>
+			<h3>a、说话人参考音频控制</h3>
             <div class="table-wrapper">
                 <table class="responsive-table">
                     <thead>
@@ -554,6 +555,44 @@
                             <td data-label="Prompt" class="col-audio"><audio controls><source src="results/f3/pair_9/00005420-00000106.wav" type="audio/wav">您的浏览器不支持音频元素。</audio></td>
                             <td data-label="Input text">应采儿和妈妈，妈妈逆生长啊，比应采儿还要年轻。</td>
                             <td data-label="Synthetic results" class="col-audio"><audio controls><source src="results/f3/pair_9/00005420-00000054_syn.wav" type="audio/wav">您的浏览器不支持音频元素。</audio></td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+			<h3>b、说话人声音描述控制</h3>
+			<th>说话人声音描述：一位中年男性，声音低沉、坚定且有力，整体感觉庄重而严肃。</th>
+            <div class="table-wrapper">
+                <table class="responsive-table">
+                    <thead>
+                        <tr>
+                            <th>Input text</th>
+                            <th class="col-audio">Synthetic results</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td data-label="Input text">简单地说，这相当于惠普把消费领域市场拱手相让了。</td>
+                            <td data-label="Synthetic results" class="col-audio"><audio controls><source src="results/f3/caption/10002287-00000095.wav" type="audio/wav">您的浏览器不支持音频元素。</audio></td>
+                        </tr>
+                        <tr>
+                            <td data-label="Input text">共同建设面向未来的交通，和出行服务新生态。</td>
+                            <td data-label="Synthetic results" class="col-audio"><audio controls><source src="results/f3/caption/10002298-00000016.wav" type="audio/wav">您的浏览器不支持音频元素。</audio></td>
+                        </tr>
+                        <tr>
+                            <td data-label="Input text">小鸟请妈妈施展魔法，让小池塘里长出很多很密的水草。</td>
+                            <td data-label="Synthetic results" class="col-audio"><audio controls><source src="results/f3/caption/00005477-00000079.wav" type="audio/wav">您的浏览器不支持音频元素。</audio></td>
+                        </tr>
+                        <tr>
+                            <td data-label="Input text">妈妈期许用最好的爱来守护自己的宝贝。</td>
+                            <td data-label="Synthetic results" class="col-audio"><audio controls><source src="results/f3/caption/00005466-00000110.wav" type="audio/wav">您的浏览器不支持音频元素。</audio></td>
+                        </tr>
+                        <tr>
+                            <td data-label="Input text">随后他拎起一根草杆放在鼻子上，头尽量往后仰着。</td>
+                            <td data-label="Synthetic results" class="col-audio"><audio controls><source src="results/f3/caption/00005429-00000111.wav" type="audio/wav">您的浏览器不支持音频元素。</audio></td>
+                        </tr>
+                        <tr>
+                            <td data-label="Input text">应采儿和妈妈，妈妈逆生长啊，比应采儿还要年轻。</td>
+                            <td data-label="Synthetic results" class="col-audio"><audio controls><source src="results/f3/caption/00005420-00000054.wav" type="audio/wav">您的浏览器不支持音频元素。</audio></td>
                         </tr>
                     </tbody>
                 </table>
